crates/squawk_parser/tests/snapshots/tests__drop_role_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_role.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_ROLE
    DROP_KW "drop"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_ROLE
    DROP_KW "drop"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "a"
    COMMA ","
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "b"
    COMMA ","
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "c"
    SEMICOLON ";"
  WHITESPACE "\n"
  DROP_ROLE
    DROP_KW "drop"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "a"
    COMMA ","
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "b"
    COMMA ","
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "c"
    SEMICOLON ";"
  WHITESPACE "\n\n"
