crates/squawk_parser/tests/snapshots/tests__drop_rule_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_rule.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_RULE
    DROP_KW "drop"
    WHITESPACE " "
    RULE_KW "rule"
    WHITESPACE " "
    RULE_REF
      IDENT "s"
    WHITESPACE " "
    ON_RELATION
      ON_KW "on"
      WHITESPACE " "
      RELATION_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "t"
    SEMICOLON ";"
  EMPTY_STMT
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_RULE
    DROP_KW "drop"
    WHITESPACE " "
    RULE_KW "rule"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    RULE_REF
      IDENT "r"
    WHITESPACE " "
    ON_RELATION
      ON_KW "on"
      WHITESPACE " "
      RELATION_NAME_REF
        PATH_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "foo"
          DOT "."
          PATH_SEGMENT_REF
            IDENT "t_name"
    WHITESPACE " "
    CASCADE
      CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n"
  DROP_RULE
    DROP_KW "drop"
    WHITESPACE " "
    RULE_KW "rule"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    RULE_REF
      IDENT "r"
    WHITESPACE " "
    ON_RELATION
      ON_KW "on"
      WHITESPACE " "
      RELATION_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "a"
    WHITESPACE " "
    RESTRICT
      RESTRICT_KW "restrict"
    SEMICOLON ";"
  WHITESPACE "\n\n"
