crates/squawk_parser/tests/snapshots/tests__drop_server_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_server.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_SERVER
    DROP_KW "drop"
    WHITESPACE " "
    SERVER_KW "server"
    WHITESPACE " "
    SERVER_REF
      IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_SERVER
    DROP_KW "drop"
    WHITESPACE " "
    SERVER_KW "server"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    SERVER_REF
      IDENT "a"
    COMMA ","
    WHITESPACE " "
    SERVER_REF
      IDENT "b"
    COMMA ","
    WHITESPACE " "
    SERVER_REF
      IDENT "c"
    WHITESPACE " "
    CASCADE
      CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n"
  DROP_SERVER
    DROP_KW "drop"
    WHITESPACE " "
    SERVER_KW "server"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    SERVER_REF
      IDENT "a"
    COMMA ","
    WHITESPACE " "
    SERVER_REF
      IDENT "b"
    COMMA ","
    WHITESPACE " "
    SERVER_REF
      IDENT "c"
    WHITESPACE " "
    RESTRICT
      RESTRICT_KW "restrict"
    SEMICOLON ";"
  WHITESPACE "\n\n"
