crates/squawk_parser/tests/snapshots/tests__drop_table_err.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/err/drop_table.sql
---
SOURCE_FILE
  COMMENT "-- missing comma"
  WHITESPACE "\n"
  DROP_TABLE
    DROP_KW "drop"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "foo"
    COMMA ","
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "bar"
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "buzz"
    WHITESPACE " "
    CASCADE
      CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- missing name"
  WHITESPACE "\n"
  DROP_TABLE
    DROP_KW "drop"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "foo"
    COMMA ","
    WHITESPACE "   "
    ERROR
      COMMA ","
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "buzz"
    WHITESPACE " "
    CASCADE
      CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- trailing comma"
  WHITESPACE "\n"
  DROP_TABLE
    DROP_KW "drop"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "p"
    ERROR
      COMMA ","
    SEMICOLON ";"
  WHITESPACE "\n"
  DROP_TABLE
    DROP_KW "drop"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "p"
    ERROR
      COMMA ","
    WHITESPACE " "
    CASCADE
      CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n"
  DROP_TABLE
    DROP_KW "drop"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "p"
    ERROR
      COMMA ","
  WHITESPACE "\n"
---
error[syntax-error]: expected COMMA
  ╭▸ 
2 │ drop table foo, bar buzz cascade;
  ╰╴                   ━
error[syntax-error]: unexpected comma, expected a name
  ╭▸ 
5 │ drop table foo,   , buzz cascade;
  ╰╴                  ━
error[syntax-error]: unexpected comma, expected a name
  ╭▸ 
8 │ drop table p,;
  ╰╴            ━
error[syntax-error]: unexpected comma, expected a name
  ╭▸ 
9 │ drop table p, cascade;
  ╰╴            ━
error[syntax-error]: unexpected comma, expected a name
   ╭▸ 
10 │ drop table p,
   ╰╴            ━
