crates/squawk_parser/tests/snapshots/tests__drop_table_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_table.sql
---
SOURCE_FILE
  DROP_TABLE
    DROP_KW "drop"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "some_table"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- schema"
  WHITESPACE "\n"
  DROP_TABLE
    DROP_KW "drop"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "foo"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "some_table"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_TABLE
    DROP_KW "drop"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "t"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- duo"
  WHITESPACE "\n"
  DROP_TABLE
    DROP_KW "drop"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "a"
    COMMA ","
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "b"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- schema"
  WHITESPACE "\n"
  DROP_TABLE
    DROP_KW "drop"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "foo"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "t"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- if exists"
  WHITESPACE "\n"
  DROP_TABLE
    DROP_KW "drop"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "t"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- cascade"
  WHITESPACE "\n"
  DROP_TABLE
    DROP_KW "drop"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "foo"
    COMMA ","
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "bar"
    WHITESPACE " "
    CASCADE
      CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- cascade is the table name"
  WHITESPACE "\n"
  DROP_TABLE
    DROP_KW "drop"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- restrict is the table name"
  WHITESPACE "\n"
  DROP_TABLE
    DROP_KW "drop"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          RESTRICT_KW "restrict"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- restrict"
  WHITESPACE "\n"
  DROP_TABLE
    DROP_KW "drop"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "t"
    WHITESPACE " "
    RESTRICT
      RESTRICT_KW "restrict"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_TABLE
    DROP_KW "drop"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IF_KW "if"
    SEMICOLON ";"
  WHITESPACE "\n"
