crates/squawk_parser/tests/snapshots/tests__drop_tablespace_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_tablespace.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_TABLESPACE
    DROP_KW "drop"
    WHITESPACE " "
    TABLESPACE_KW "tablespace"
    WHITESPACE " "
    TABLESPACE_REF
      IDENT "foo"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_TABLESPACE
    DROP_KW "drop"
    WHITESPACE " "
    TABLESPACE_KW "tablespace"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    TABLESPACE_REF
      IDENT "t"
    SEMICOLON ";"
  WHITESPACE "\n\n"
